--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -20,7 +20,7 @@
     color: var(--text-color);
 }
 
-#texto-pos{
+#texto-pos {
     padding: 0 15% 0 15%;
 }
 
@@ -66,7 +66,27 @@
     font-family: "Muller";
 }
 
-.texto-post2{
+.post-description2 {
+    font-weight: bold !important;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    font-family: "Grover Caps";
+}
+
+#id-description {
+    font-weight: 500 !important;
+    font-family: "Muller";
+    color: #008EDE;
+    line-height: 1.5;
+    word-break: break-all;
+}
+
+#id-description:hover{
+    color: var(--main-color);
+    transition: all .45s ease;
+}
+
+.texto-post2 {
     margin-top: 4rem;
 }
 
@@ -99,7 +119,7 @@
     text-align: center;
 }
 
-.veja-tambem{
+.veja-tambem {
     text-align: center;
     margin-top: 8rem;
 }
@@ -110,5 +130,17 @@
     justify-content: center;
     gap: 2rem;
     margin-top: 4rem;
+}
+
+.post-text-quebra {
+    margin-top: 2rem !important;
+}
+
+#lista-noticia{
+    list-style-type: disc;
+    font-family: "Muller" !important;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-top: 1rem;
 }
 /* SECTION TULIPA ===================================================  */
