--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #fff;
+    background: transparent;
     padding: 22px 15%;
     box-shadow: 3px 1.4px 5px 4px #ccc;
     transition: all .45s ease;
