--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -90,35 +90,6 @@
     margin-top: 4rem;
 }
 
-#icon-post {
-    font-size: 2rem;
-    color: var(--text-color);
-    display: inline-flex;
-    flex-wrap: wrap;
-    padding-top: 0.5rem;
-    margin-right: 10px;
-}
-
-#icon-post:hover {
-    color: var(--main-color);
-    transform: translateY(5px);
-    transition: all .45s ease;
-}
-
-.share {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 1rem;
-    margin-top: 10%;
-}
-
-.share-title {
-    font-size: 1.1rem;
-    margin-top: 2rem;
-    text-align: center;
-}
-
 .veja-tambem {
     text-align: center;
     margin-top: 8rem;
@@ -144,49 +115,32 @@
     margin-top: 1rem;
 }
 
-#share-container span {
-    display: block;
-    margin: 3rem auto;
-    font-size: 50px;
-    padding: 1rem;
-    margin: 1rem;
+#icons-share i{
+    font-size: 2.5rem;
+    color: var(--text-color);
+    display: inline-flex;
+    flex-wrap: wrap;
+    padding-top: 2rem;
+    margin-right: 10px;
 }
 
-#share-buttons i {
-    font-size: 100px;
-    margin: 20px;
+#icons-share i:hover {
+    color: var(--main-color);
+    transform: translateY(5px);
+    transition: all .45s ease;
 }
 
-.facebook {
-    color: #3b5998;
+#share-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1rem;
+    margin-top: 10%;
 }
 
-.twitter {
-    color: #55acee;
+.share-title {
+    font-size: 1.1rem;
+    margin-top: 2rem;
+    text-align: center;
 }
-
-.linkedin {
-    color: #0077b5;
-}
-
-.reddit {
-    color: #cb2027;
-}
-
-.whatsapp {
-    color: #25D366;
-}
-
-.telegram {
-    color: #229ED9;
-}
-
-.facebook, .twitter, .linkedin, .reddit, .whatsapp, .telegram {
-    opacity: 0.6;
-}
-
-.facebook:hover, .twitter:hover, .linkedin:hover, .reddit:hover, .whatsapp:hover, .telegram:hover {
-    opacity: 0.9;
-}
-
 /* SECTION TULIPA ===================================================  */
