--- a/css/index.css
+++ b/css/index.css
@@ -84,34 +84,48 @@ section:not(.section-fingers-documentacao) {
     -o-background-size: cover;
 }
 
-#home {
-    background-image: url(../imgs/fundo.png);
-}
 
-/*
-figure {
-    margin: 0;
-    position: relative;
-}
 
-video {
+.container-video {
     width: 100%;
-    max-width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.hero-wrapper {
-    position: fixed;
-    bottom: 0;
+.background-clip {
+    position: absolute;
     right: 0;
-    height: auto;
-    width: auto;
-    min-height: 100%;
-    min-width: 100%;
-    z-index: -9999;
+    bottom: 0;
+    z-index: -1;
 }
-*/
 
-/*
+@media (min-aspect-ratio:16/9) {
+    .background-clip {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio:16/9) {
+    .background-clip {
+        width: auto;
+        height: 100%;
+    }
+}
+
+.home {
+    /* estilo da section home */
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .home video {
     position: absolute;
     left: 0;
@@ -119,7 +133,23 @@ video {
     width: 100%;
     filter: brightness(80%);
 }
-*/
+
+.home img {
+    position: absolute;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    filter: brightness(80%);
+}
+
+.home .home-text {
+    position: relative;
+    z-index: 1;
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20%;
+}
 
 #home img {
     position: absolute;
