--- a/css/contato.css
+++ b/css/contato.css
@@ -88,3 +88,4 @@ form textarea {
 }
 
 /* SECTION CONTATO ====================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
