--- a/css/fingers.css
+++ b/css/fingers.css
@@ -160,3 +160,4 @@
     margin-top: 4rem;
 }
 /* SECTION TULIPA ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
