--- a/css/flexgrippers.css
+++ b/css/flexgrippers.css
@@ -74,3 +74,4 @@
 }
 
 /* SECTION TULIPA ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
