--- a/css/index.css
+++ b/css/index.css
@@ -505,3 +505,4 @@ section:not(.section-fingers-documentacao){
 }
 
 /* SECTION PRINCIPAL =================================================== */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
