--- a/css/noticias.css
+++ b/css/noticias.css
@@ -130,3 +130,4 @@
 }
 
 /* SECTION TULIPA ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
