--- a/css/pos-noticias.css
+++ b/css/pos-noticias.css
@@ -144,3 +144,4 @@
     text-align: center;
 }
 /* SECTION TULIPA ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
