--- a/css/produtos.css
+++ b/css/produtos.css
@@ -161,3 +161,4 @@
 }
 
 /* SECTION PRODUTOS ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
