--- a/css/footer.css
+++ b/css/footer.css
@@ -161,3 +161,4 @@
 }
 
 /* SECTION FOOTER =====================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
