--- a/css/sobre.css
+++ b/css/sobre.css
@@ -50,3 +50,4 @@
 }
 
 /* SOBRE ==============================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
