--- a/css/tulipa.css
+++ b/css/tulipa.css
@@ -129,3 +129,4 @@
 }
 
 /* SECTION TULIPA ===================================================  */
+/* ESTE SITE FOI DESENVOLVIDO POR NICHOLAS GERADE - COPYRIGHT © 2023*/ 
