--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ section:not(.section-fingers-documentacao) {
 .home video {
     position: absolute;
     left: 0;
-    object-fit: cover;
+    object-fit: fill;
     width: 100%;
     filter: brightness(80%);
 }
