--- a/css/index.css
+++ b/css/index.css
@@ -91,7 +91,7 @@ section:not(.section-fingers-documentacao) {
 .container-video {
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
